--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
     "italy = None # 'Italy'\n",
     "italy\n",
     "countries[-3]\n",
-    "italy = countries[-3]"
+    "countries[-3]=''"
    ]
   },
   {
