--- a/index.ipynb
+++ b/index.ipynb
@@ -171,13 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-7-294c11c4d647>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-294c11c4d647>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    mexico = None\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "mexico = None\n",
+    "countries[3]\n",
+    "          mexico = None\n",
     "mexico"
    ]
   },
