--- a/index.ipynb
+++ b/index.ipynb
@@ -171,9 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mexico'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries[3]\n",
     "mexico = countries[3]\n",
@@ -189,14 +200,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors"
+    "kindof_neighbors = countries[1:]"
    ]
   },
   {
