automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,8 @@
    ],
    "source": [
     "countries.append('Thailand')\n",
-    "countries# add code here"
+    "countries\n",
+    "countiries.pop(# add code here"
    ]
   },
   {
