--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -285,14 +285,16 @@
        "'Thailand'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "countries.append('Thailand')\n",
-    "countries.pop()"
+    "countries.pop()\n",
+    "countries.pop()\n",
+    "countiries"
    ]
   },
   {
