automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "'Thailand'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
     "countries.append('Thailand')\n",
     "countries.pop()\n",
     "countries.pop()\n",
-    "countiries"
+    "countries.pop()"
    ]
   },
   {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -325,13 +325,10 @@
        " 'Canada',\n",
        " 'South Korea',\n",
        " 'Malta',\n",
-       " 'Thailand',\n",
-       " 'Thailand',\n",
-       " 'Thailand',\n",
        " 'Thailand']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
