automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -514,13 +514,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "len(counnum_of_repeats = None\n",
+    "len(countries)\n",
+    "len (unique_countries)\n",
+    "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
   },
