--- a/index.ipynb
+++ b/index.ipynb
@@ -514,22 +514,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(countries)\n"
+    "num_of_repeats = len(countries)\n",
+    "len(unique_countries)\n",
+    "num_of_repeats = None\n",
+    "num_of_repeats # 3"
    ]
   },
   {
